<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imagen_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fondo_login" />

    <TextView
        android:id="@+id/titulo01"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/food_delivery"
        android:textSize="55sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/titulo01"
        android:background="@android:color/white"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUser"
                style="@style/cajasTextos"
                android:hint="@string/usuario">
                <requestFocus/>

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPass"
                style="@style/cajasTextos"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_below="@+id/linearLayout"
        android:background="@drawable/boton"
        android:layout_marginTop="30dp"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/white"
        style="@style/botones"/>


    <Button
        android:id="@+id/cuentaNueva"
        android:layout_below="@+id/botonLogin"
        android:background="@drawable/boton02"
        android:text="@string/registro"
        android:textColor="@color/colorPrimary"
        android:onClick="registrationActivity"
        style="@style/botones"/>

</RelativeLayout>