<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pago_con_tarjeta"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextName"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/surname"
                />

            <EditText
                android:id="@+id/editTextCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Número de tarjeta"
                />

            <TextView
                android:id="@+id/textViewExpireDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="0dp"
                android:text="@string/fecha_de_caducidad"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextExpireMonth"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/mes"
                    />

                <EditText
                    android:id="@+id/editTextExpireYear"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editTextExpireMonth"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/year"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewCode"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:text="@string/csv"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/editTextCSV"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="38dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/csv"/>

            <TextView
                android:id="@+id/textoBlanco"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="38dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
            <TextView
                android:id="@+id/textoBlanco01"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="38dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""/>


            <RadioButton
                android:id="@+id/radio_efectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pago_en_efectivo"
                android:textSize="25sp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTotalOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="425dp"
        android:text="TOTAL ORDER"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        style="@style/botones"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/boton"
        android:text="CONFIRMAR"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="confirmar"/>

</RelativeLayout>